<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.quizactivity.QuizActivity">

        <TextView
            android:id="@+id/label_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="monospace"
            android:text="Trivia App"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#000F6C"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_quiz_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="monospace"
            android:text="Who is the best cricketer in the world? "
            android:textColor="#07177C"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/label_app"
            tools:ignore="HardcodedText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_first_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_question">

            <RadioGroup
                android:id="@+id/rgroup_first_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_sachin"
                    style="@android:style/Widget.CompoundButton.CheckBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/sachin_tendulkar"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_virat"
                    style="@android:style/Widget.CompoundButton.CheckBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/virat_kolli"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_adam"
                    style="@android:style/Widget.CompoundButton.CheckBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/adam_gilchirst"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_kallis"
                    style="@android:style/Widget.CompoundButton.CheckBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/jacques_kallis"
                    android:textSize="18sp" />
            </RadioGroup>

            <Button
                android:id="@+id/bt_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:text="Next"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgroup_first_question"
                tools:ignore="HardcodedText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_second_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_question">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/ch_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/ch_yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/yellow"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ch_white" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/ch_orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/orange"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ch_yellow" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/ch_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/green"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ch_orange" />


            <Button
                android:id="@+id/bt_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="5dp"
                android:text="Submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ch_green"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_quiz"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            tools:ignore="ContentDescription,HardcodedText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>