<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_margin="5sp"
        app:cardElevation="3dp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_game"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:text="Game1 : "
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_date"
                android:padding="4dp"
                android:layout_margin="4dp"
                app:layout_constraintStart_toEndOf="@id/label_game"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:text="15th March 2:00 pm"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_name"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/name"
                app:layout_constraintTop_toBottomOf="@id/label_game"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_name"
                android:padding="4dp"
                android:layout_margin="4dp"
                app:layout_constraintStart_toEndOf="@id/label_game"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:text="Farhan Alam"
                app:layout_constraintTop_toBottomOf="@id/label_game"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/label_frst_quest"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/first_question"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_first_ans"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:text="@string/jacques_kallis"
                app:layout_constraintTop_toBottomOf="@id/label_frst_quest"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/label_scnd_quest"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/second_question"
                app:layout_constraintTop_toBottomOf="@id/tv_first_ans"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_scnd_ans"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:text="@string/orange"
                app:layout_constraintTop_toBottomOf="@id/label_scnd_quest"
                app:layout_constraintEnd_toEndOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>





</layout>